@@ -463,6 +463,12 @@ familyCommand "/FAM"
 
 
 
+orderCommand "ORDER,"
+
+followerMarker "+FOLLOWER+"
+
+
+
 fps "FPS"
 
 fpsPending "FPS..."
