@@ -42,6 +42,9 @@ Version 309   ???
 --When a leader issues an order, they get a temporary SUPP arrow back to their
   closest follower.
 
+--When issuing an order, the leader sees +FOLLOWER+ markers above the heads of
+  nearby followers.
+
 
 
 Version 307   2020-January-30
